# sabiasagi

./: Cargo.toml  README.md
assets/: pokemon_back_sprites.html  pokemon_front_sprites.html
assets/data/: Pokedex.csv
assets/references/: Final_Pokemon_Battler_Demo.mov
battle_plugin/: Cargo.toml
battle_plugin/src/: lib.rs  pokemon_generation.rs  pokemon_roster.rs
src/: constants.rs  main.rs  ui.rs
